--- a/public/index.html
+++ b/public/index.html
@@ -217,9 +217,9 @@
   <!-- Splash Screen -->
   <div id="splash-screen">
     <div id="splash-content">
-      <h2>This is LinkedIn or Pornstar!</h2>
-      <p>All of these photos were taken from either LinkedIn or the Internet Adult Film Database! Can you guess which is which?</p>
-      <p>You'll get <strong>10 pictures per round</strong> and only <strong>15 seconds</strong> to guess.</p>
+      <h2>You work at an employment agency and you've just made a huge mistake!</h2>
+      <p>You were carrying a huge stack of resumes of professional business people under one arm, pornstars under the other, and accidentally dropped them and they're all mixed up!</p>
+      <p>Quick!  Your Boss is coming!  Pick up <strong>10 pictures</strong> and take only <strong>15 seconds</strong> to sort each one!</p>
       <button id="start-button">Let's Go!</button>
     </div>
   </div>
